--- a/.github/workflows/k6-test.yml
+++ b/.github/workflows/k6-test.yml
@@ -17,6 +17,8 @@ jobs:
       uses: grafana/k6-action@v0.2.0
       with:
         filename: test.js
+        cloud: true
+        token: 587b1c3d66beba6f25726cd08206de32d68d5b48a38e70c24e000fbe69f4a2f9
 
 
   
