--- a/.github/workflows/k6-test.yml
+++ b/.github/workflows/k6-test.yml
@@ -24,3 +24,9 @@ jobs:
       with:
         name: k6-report
         path: k6TestingOutput.json
+
+        - name: Upload summary
+      uses: actions/upload-artifact@v4
+      with:
+        name: cai-summary
+        path: summary.json
